--- a/server/views/page2/index.html
+++ b/server/views/page2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>tea gallery - page2</title>
+    <title>example - page2</title>
     <% if (env === "production") { %>
         <link rel="stylesheet" href="/page2/index.css">
     <% } %>
@@ -14,7 +14,7 @@
         <div class="image-example-common"></div>
     </div>
     <script src="/page2/bundle.js"></script>
-    <% if (env !== "production") { %>
+    <% if (env !== "production" && reload === true) { %>
         <script src="/reload/reload.js"></script>
     <% } %>
 </body>
