revert to origin

--- a/client/page1/index.scss
+++ b/client/page1/index.scss
@@ -1,9 +1,9 @@
 @import '../common/common';
 
 .first-note {
-    color: red;
+    color: blue;
     font-size: 14px;
-    text-align: right;
+    text-align: left;
 }
 
 .image-example-page1 {
