--- a/server/views/page1/index.html
+++ b/server/views/page1/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="total-container">
-        <div class="first-note">This is page1. Hello!</div>
+        <div class="first-note">This is page1.</div>
         <br>
         <div id="draw" class="image-example-page1"></div>
     </div>
